Fix #39 labels overlapping with rules text

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -490,6 +490,7 @@ select {
 		position: relative;
 		top: 0;
 		margin-bottom: 0.5rem;
+		z-index: -10;
 	}
 }
 #card-search {
